--- a/style.css
+++ b/style.css
@@ -11,32 +11,49 @@ body {
 	padding: 0;
 }
 
-ul,
-li {
-	list-style: none;
-}
-
 a {
 	text-decoration: none;
 }
 
+.modal {
+	background-color: rgba(0, 0, 0, 0.8);
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.detail-modal {
+	background-color: white;
+	width: 500px;
+	height: 300px;
+}
 
 
 .container {
-	display: grid;
-	grid-template-columns: 1fr 5fr;
-	height: 100vh;
+	max-width: 1200px;
+	margin: 0 auto;
 }
 
-.sidebar {
-	grid-column: 1;
-	background-color: grey;
+.header {
+	padding: 0 10px;
+	text-align: center;
+}
+.header button {
+	display: block;
+	width: 100%;
+	height: 40px;
+	border-radius: 5px;
+	margin-bottom: 10px;
+	cursor: pointer;
 }
 
 .bookshelf {
-	grid-column: 2;
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
 	align-content: start;
 	justify-items: center;
 	gap: 20px;
@@ -49,11 +66,36 @@ a {
 	width: 130px;
 	height: 200px;
 	padding: 10px;
+	transition: transform .2s;
+	cursor: pointer;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+  background-size: cover;
+}
+.book h3,
+.book h4 {
+	margin: 0;
+	padding: 0;
+}
+.book:hover {
+  transform: scale(1.1);
 }
 
 @media screen and (max-width:700px) {
 	.container {
 		grid-template-columns: auto;
+		height: auto;
+	}
+	.header {
+		text-align: center;
+	}
+	.header button {
+		display: inline;
+		width: auto;
+		height: 40px;
+		border-radius: 5px;
+		margin-bottom: 30px;
 	}
 	.bookshelf {
 		grid-column: 1;
